// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Snapshots tests should match snapshot 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="content"
          >
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 5
          </span>
        </button>
        <div
          class="line"
          style="width: 0px; transform: translateX(0px);"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 2`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component component s s outlined checked rounded outlined title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 3`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class=""
            id="tab-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 1
            </span>
            <span>
              addon
            </span>
          </button>
          <button
            aria-selected="true"
            class=""
            id="tab-2"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class=""
            >
              Таб 2
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-3"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 3
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-4"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 4
            </span>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-5"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class=""
            >
              Таб 5
            </span>
          </button>
          <div
            style="width: 0px; transform: translateX(0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 4`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class="component component component xs xs outlined rounded outlined withRightAddons"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 1
            </span>
            <span
              class="addons"
            >
              addon
            </span>
          </button>
          <button
            aria-selected="true"
            class="component component component xs xs outlined checked rounded outlined"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span>
              Таб 2
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component xs xs outlined rounded outlined"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 3
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component xs xs outlined rounded outlined"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 4
            </span>
          </button>
          <button
            aria-selected="false"
            class="component component component xs xs outlined rounded outlined"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span>
              Таб 5
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 5`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 1
          </span>
          <span
            class="rightAddons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="content"
          >
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="content"
          >
            Таб 5
          </span>
        </button>
        <div
          class="line"
          style="width: 0px; transform: translateX(0px);"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 6`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined withRightAddons title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 1
          </span>
          <span
            class="addons"
          >
            addon
          </span>
        </button>
        <button
          aria-selected="true"
          class="component component component s s outlined checked rounded outlined title"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span>
            Таб 2
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 3
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 4
          </span>
        </button>
        <button
          aria-selected="false"
          class="component component component s s outlined rounded outlined title"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span>
            Таб 5
          </span>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;
